<resources>
    <string name="app_name">LocationNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_username">Tài khoản</string>
    <string name="string_password">Mật khẩu</string>
    <string name="string_remember">Ghi nhớ</string>
    <string name="string_forgotpassword">Quên mật khẩu</string>
    <string name="string_login">Đăng nhập</string>
    <string name="string_register">Đăng ký</string>
    <string name="string_information">Copyright by Viettel ICT</string>
    <string name="defaut_note_number">0</string>
    <string name="link">http://104.155.202.249/LocationNote/</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_location_note_list1">LocationNoteList1</string>
    <string name="title_activity_send__messager">Send_Messager</string>
    <string name="tittle_activity_detail">Detail</string>
    <string name="key_map_google_api">AIzaSyAxFC0NQqb0H6hJAK3BrriaN-unDyMpjQY</string>
    <string-array name="maps_type">
        <item>MAP_TYPE_NORMAL</item>
        <item>MAP_TYPE_SATELLITE</item>
        <item>MAP_TYPE_HYBRID</item>
        <item>MAP_TYPE_TERRAIN</item>
    </string-array>
    <string name="title_activity_detail_note">detailNoteActivity</string>

</resources>
