<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_login"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.quang11t1.locationnote.activity.Login"
    tools:showIn="@layout/activity_login">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/logo_panding_top"
        android:id="@+id/imageView2"
        android:src="@drawable/launcher_icon"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingTop="40dp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_user"
            android:id="@+id/imageView3" />

        <EditText
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_marginLeft"
            android:hint="@string/string_username"
            android:backgroundTint="@color/colorPrimary"

            android:id="@+id/editText_user" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingTop="5dp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_password"
            android:id="@+id/imageView4" />

        <EditText
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_marginLeft"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/string_password"
            android:id="@+id/editText_password" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingTop="5dp"
        android:layout_height="wrap_content">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="60dp"
            android:text="@string/string_remember"
            android:id="@+id/checkBox_remember_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_forgotpassword"
            android:id="@+id/textView4" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/string_login"
        android:textColor="@color/colorTextWhite"
        android:id="@+id/button_login"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/string_register"
        android:textColor="@color/colorTextWhite"
        android:id="@+id/button_register"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_information"
            android:textColor="@color/colorTextWhite"
            android:layout_marginBottom="8dp"
            android:id="@+id/textView5" />
    </LinearLayout>

</LinearLayout>
